# pydist2

./: .bumpversion.cfg  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: BUG_REPORT.rst  FEATURE_REQUEST.rst
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: API.rst  Makefile  conf.py  guide.rst  index.rst  installation guide.rst  make.bat  modules.rst  pydist2.rst  tutorial.rst
pydist2/: __init__.py  custom_typing.py  distance.py
tests/: __init__.py  test_pydist2.py
